--- a/slides.tex
+++ b/slides.tex
@@ -251,8 +251,8 @@ NO F 61}
 	\tableofcontents%[hidea b llsubsections]
 \end{frame}
 %
-%\input{lecture-1-introduction}
-\input{lecture-2-chemical-equilibrium}
+\input{lecture-1-introduction}
+%\input{lecture-2-chemical-equilibrium}
 %\input{lecture-3-thermodynamic-model}
 %\input{lecture-4-numerical-method-equilibrium}
 %project descriptions
@@ -272,6 +272,7 @@ NO F 61}
 %
 % \quad $\bullet$ Interactive MyBinder Reaktoro v1: \href{https://mybinder.org/v2/gh/reaktoro/reaktoro-jupyter/master?filepath=tutorial%2Foverview.ipynb}{\textcolor{indigo(dye)}{\it link}} \\
 \quad $\bullet$ Hands-on Jupyter notebooks Reaktoro v1:  \href{https://github.com/mtsveta/reaktoro-jupyter.git}{\textcolor{indigo(dye)}{\it link}} \\
+\quad $\bullet$ Videos explaining some Jupyter notebooks with Reaktoro v1:  \href{https://polybox.ethz.ch/index.php/s/qStBnxUnry648U5}{\textcolor{indigo(dye)}{\it link}} \\
 \end{frame}
 
 
